# MCP-Server

./: client.py  mcp.json
ToolCalling/: pyproject.toml  server.py
