[project]
name = "toolcalling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.6.1",
    "langchain>=0.3.25",
    "mcp-use>=1.2.8",
    "mcp[cli]>=1.7.1",
    "python-telegram-bot>=22.0",
]
